# literalizer-cli-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  pyproject.toml  zizmor.yml
.github/workflows/: ci.yml  lint.yml  release.yml
